...
                            indicatorWeight: 1.0,
                            tabs: [
                              Tab(
                                text: 'Signup',
                              ),
                              Tab(
                                key: ValueKey('LoginTab_0vxa'),
                                text: 'Login',
                              ),
                            ],
                            controller: _model.tabBarController,
                            onTap: (i) async {
                              [() async {}, () async {}][i]();
...
                                  mainAxisAlignment:
                                      MainAxisAlignment.spaceEvenly,
                                  children: [
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('LoginEmail_ln8c'),
                                        controller:
                                            _model.loginEmailTextController,
                                        focusNode: _model.loginEmailFocusNode,
                                        onChanged: (_) => EasyDebounce.debounce(
                                          '_model.loginEmailTextController',
                                          Duration(milliseconds: 2000),
...
                                            .asValidator(context),
                                      ),
                                    ),
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('LoginPassword_rs30'),
                                        controller:
                                            _model.loginPasswordTextController,
                                        focusNode:
                                            _model.loginPasswordFocusNode,
                                        autofocus: false,
                                        textInputAction: TextInputAction.done,
...
                        elevation: 0.0,
                        borderRadius: BorderRadius.circular(8.0),
                      ),
                    ),
                  if (_model.tabBarCurrentIndex == 1)
                    FFButtonWidget(
                      key: ValueKey('LoginButton_3210'),
                      onPressed: () async {
                        if (_model.formKey1.currentState == null ||
                            !_model.formKey1.currentState!.validate()) {
                          return;
                        }
                        GoRouter.of(context).prepareAuthEvent();
...
